# SpatiaLite

./: CMakeLists.txt  _FOSSIL_
cmake/: FindGEOS.cmake  FindIconv.cmake  configure.cmake
examples/: CMakeLists.txt  demo1.c  demo2.c  demo5.c
src/: CMakeLists.txt
test/: CMakeLists.txt  mapconfig.xml
test/sql_stmt_tiny_point/: Makefile.in
